--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <application
         android:name=".support.Application"
         android:allowBackup="true"
@@ -13,15 +17,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".activities.DashBoardDrawerActivity"
+            android:label="@string/title_activity_dash_board_drawer"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCh135VvdSZMe7xMu6IyxVOrYBbhSm0CGw"/>
+            android:value="AIzaSyCh135VvdSZMe7xMu6IyxVOrYBbhSm0CGw" />
 
-        <activity android:name="com.engintech.vtracking.activities.DashBoardActivity"></activity>
+        <activity android:name="com.engintech.vtracking.activities.DashBoardActivity" />
         <activity android:name=".activities.OnBoardingActivity" />
         <activity android:name=".baseControls.BaseActivity" />
         <activity android:name=".activities.MainActivity">
@@ -32,7 +41,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-feature
-        android:glEsVersion="0x00020000"
-        android:required="true"/>
+
 </manifest>
