--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,11 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.et.vtracking"
-        minSdkVersion 23
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,6 +27,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -58,6 +61,9 @@ dependencies {
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
 
     implementation 'com.poovam:pin-edittext-field:1.2.1'
+
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
