--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.et.vtracking"
+        applicationId "com.et.tracker"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
