--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.et.vtracking">
+    package="com.et.tracker">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -10,7 +10,7 @@
         android:required="true" />
 
     <application
-        android:name=".support.Application"
+        android:name="com.et.tracker.support.Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -30,10 +30,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCh135VvdSZMe7xMu6IyxVOrYBbhSm0CGw" />
 
-        <activity android:name="com.engintech.vtracking.activities.DashBoardActivity" />
-        <activity android:name=".activities.OnBoardingActivity" />
-        <activity android:name=".baseControls.BaseActivity" />
-        <activity android:name=".activities.MainActivity">
+        <activity android:name="com.et.tracker.activities.DashBoardActivity" />
+        <activity android:name="com.et.tracker.activities.OnBoardingActivity" />
+        <activity android:name="com.et.tracker.baseControls.BaseActivity" />
+        <activity android:name="com.et.tracker.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
